# flighthook_integrations

./: .gitignore
sample_range/: Cargo.toml  README.md  build.rs  startup.sh
sample_range/shaders/: hud.frag  hud.vert  scene.frag  scene.vert  trail.vert
sample_range/shaders/spirv/: hud.frag.spv  hud.vert.spv  scene.frag.spv  scene.vert.spv  trail.vert.spv
sample_range/src/: app.rs  flighthook.rs  main.rs  shot_data.rs
sample_range/src/hud/: font_atlas.rs  mod.rs
sample_range/src/scene/: meshes.rs  mod.rs
sample_range/src/vulkan/: buffer.rs  mod.rs  texture.rs
