[package]
name = "flightscope_vulkan"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.38"
winit = "0.30"
raw-window-handle = "0.6"
ash-window = "0.13"
glam = "0.28"
gpu-allocator = { version = "0.27", features = ["vulkan"] }
fontdue = "0.9"
png = "0.17"
tungstenite = "0.24"
serde_json = "1"
